--- a/visite.html
+++ b/visite.html
@@ -61,11 +61,46 @@
   <section class="specialties">
     <div class="container">
   
-      <div class="specialties-grid">
-        <div class="specialty-card" data-desc="Testo lungo per Agopuntura...">
-          <img src="agopuntura.jpg" alt="Agopuntura">
-          <div class="specialty-label">Agopuntura</div>
-        </div>
+     <div class="specialties-grid">
+  <div class="specialty-card">
+    <img src="agopuntura.jpg" alt="Agopuntura">
+    <div class="specialty-label">Agopuntura</div>
+
+    <div class="specialty-desc">
+      <h2>Agopuntura</h2>
+      <p>
+        L’Agopuntura è una tecnica terapeutica che consiste nel trattamento e nella prevenzione di varie
+        patologie tramite la stimolazione di specifici punti per mezzo di aghi molto sottili, sterili e monouso,
+        assolutamente priva di effetti collaterali.
+      </p>
+      <p>
+        L’Agopuntura ha un’azione antidolorifica, antiinfiammatoria e decontratturante sui muscoli, essa ha,
+        inoltre, un effetto sedativo, ansiolitico e antidepressivo.
+      </p>
+      <p>
+        Si valutano i sintomi e la storia clinica del paziente. I cicli sono di 5/10 sedute, a seconda della patologia
+        da trattare e della risposta del paziente.
+      </p>
+      <p>
+        L’Agopuntura è un atto medico, pertanto, può essere praticata solo da personale laureato in medicina e
+        chirurgia ed abilitato alla professione medica.
+      </p>
+      <p>Le principali patologie che possono essere trattate dall’Agopuntura sono di tipo:</p>
+      <ul>
+        <li>Muscolo-scheletriche</li>
+        <li>Neurologiche e cefalee</li>
+        <li>Urologiche</li>
+        <li>Ostetrico-ginecologiche</li>
+        <li>Broncopolmonari</li>
+        <li>Gastroenterologiche</li>
+        <li>Otorinolaringoiatriche</li>
+        <li>Dermatologiche</li>
+        <li>Psico-emotive</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
         <div class="specialty-card" data-desc="Testo lungo per Allergologia...">
           <img src="images/allergologia.jpg" alt="Allergologia">
           <div class="specialty-label">Allergologia</div>
