--- a/visite.html
+++ b/visite.html
@@ -62,42 +62,38 @@
     <div class="container">
   
      <div class="specialties-grid">
-  <div class="specialty-card">
-    <img src="agopuntura.jpg" alt="Agopuntura">
-    <div class="specialty-label">Agopuntura</div>
+        <div class="specialty-card" data-desc='
+  <h3>Agopuntura</h3>
+  <p>L&apos;Agopuntura è una tecnica terapeutica che consiste nel trattamento e nella prevenzione di varie patologie tramite la stimolazione di specifici punti per mezzo di aghi molto sottili, sterili e monouso, assolutamente priva di effetti collaterali.</p>
+  
+  <p>L&apos;Agopuntura ha un&apos;azione <strong>antidolorifica, antiinfiammatoria e decontratturante</strong> sui muscoli, essa ha, inoltre, un effetto <strong>sedativo, ansiolitico e antidepressivo</strong>.</p>
+  
+  <p>Si valutano i sintomi e la storia clinica del paziente. I cicli sono di <strong>5/10 sedute</strong>, a seconda della patologia da trattare e della risposta del paziente.</p>
+  
+  <p>L&apos;Agopuntura è un atto medico, pertanto, può essere praticata solo da personale laureato in medicina e chirurgia ed abilitato alla professione medica.</p>
+  
+  <p><strong>Le principali patologie che possono essere trattate dall&apos;Agopuntura sono:</strong></p>
+  <ul>
+    <li>Muscolo-scheletriche</li>
+    <li>Neurologiche e cefalee</li>
+    <li>Urologiche</li>
+    <li>Ostetrico-ginecologiche</li>
+    <li>Broncopolmonari</li>
+    <li>Gastroenterologiche</li>
+    <li>Otorinolaringoiatriche</li>
+    <li>Dermatologiche</li>
+    <li>Psico-emotive</li>
+  </ul>
+'>
+  <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?w=500&h=300&fit=crop" alt="Agopuntura">
+  <div class="specialty-label">Agopuntura</div>
+</div>
 
-    <div class="specialty-desc">
-      <h2>Agopuntura</h2>
-      <p>
-        L’Agopuntura è una tecnica terapeutica che consiste nel trattamento e nella prevenzione di varie
-        patologie tramite la stimolazione di specifici punti per mezzo di aghi molto sottili, sterili e monouso,
-        assolutamente priva di effetti collaterali.
-      </p>
-      <p>
-        L’Agopuntura ha un’azione antidolorifica, antiinfiammatoria e decontratturante sui muscoli, essa ha,
-        inoltre, un effetto sedativo, ansiolitico e antidepressivo.
-      </p>
-      <p>
-        Si valutano i sintomi e la storia clinica del paziente. I cicli sono di 5/10 sedute, a seconda della patologia
-        da trattare e della risposta del paziente.
-      </p>
-      <p>
-        L’Agopuntura è un atto medico, pertanto, può essere praticata solo da personale laureato in medicina e
-        chirurgia ed abilitato alla professione medica.
-      </p>
-      <p>Le principali patologie che possono essere trattate dall’Agopuntura sono di tipo:</p>
-      <ul>
-        <li>Muscolo-scheletriche</li>
-        <li>Neurologiche e cefalee</li>
-        <li>Urologiche</li>
-        <li>Ostetrico-ginecologiche</li>
-        <li>Broncopolmonari</li>
-        <li>Gastroenterologiche</li>
-        <li>Otorinolaringoiatriche</li>
-        <li>Dermatologiche</li>
-        <li>Psico-emotive</li>
-      </ul>
-    </div>
+<!-- Overlay per dettagli -->
+<div class="specialty-overlay" id="specialtyOverlay">
+  <div class="overlay-content">
+    <button class="close-overlay" aria-label="Chiudi">×</button>
+    <div class="overlay-text"></div>
   </div>
 </div>
 
