--- a/visite.html
+++ b/visite.html
@@ -85,7 +85,7 @@
     <li>Psico-emotive</li>
   </ul>
 '>
-  <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?w=500&h=300&fit=crop" alt="Agopuntura">
+  <img src="agopuntura.jpg" alt="Agopuntura">
   <div class="specialty-label">Agopuntura</div>
 </div>
 
